--- a/package.json
+++ b/package.json
@@ -7,30 +7,19 @@
     ],
     "timeout": "1m"
   },
+  "homepage": "https://webhint.io",
   "name": "telemetry",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "npm-run-all build:*",
-    "build:assets": "copyfiles \"./{src,tests}/**/{!(*.ts),.!(ts)}\" dist",
-    "build:ts": "tsc -b",
-    "lint": "eslint --ext ts --ignore-pattern dist .",
-    "prestart": "npm run build && func extensions install",
-    "start:host": "func start",
-    "start": "npm run start:host & npm run watch",
-    "test": "npm run lint && npm run build && npm run test-only",
-    "test-only": "nyc ava",
-    "watch": "tsc -w"
-  },
+  "description": "Package containing functions to calculated telemetry information.",
   "dependencies": {
     "applicationinsights": "^1.5.0",
-    "request": "^2.88.0"
+    "got": "^9.6.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.0.3",
+    "@types/got": "^9.6.7",
     "@types/node": "^12.7.12",
     "@types/proxyquire": "^1.3.28",
-    "@types/request": "^2.48.3",
     "@types/sinon": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
@@ -44,5 +33,18 @@
     "proxyquire": "^2.1.3",
     "sinon": "^7.5.0",
     "typescript": "^3.6.3"
+  },
+  "repository": "https://github.com/webhintio/telemetry.git",
+  "scripts": {
+    "build": "npm-run-all build:*",
+    "build:assets": "copyfiles \"./{src,tests}/**/{!(*.ts),.!(ts)}\" dist",
+    "build:ts": "tsc -b",
+    "lint": "eslint --ext ts --ignore-pattern dist .",
+    "prestart": "npm run build && func extensions install",
+    "start:host": "func start",
+    "start": "npm run start:host & npm run watch",
+    "test": "npm run lint && npm run build && npm run test-only",
+    "test-only": "nyc ava",
+    "watch": "tsc -w"
   }
 }
