--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "description": "Package containing functions to calculated telemetry information.",
   "dependencies": {
     "applicationinsights": "^1.5.0",
-    "got": "^9.6.0"
+    "got": "^9.6.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.0.3",
     "@types/got": "^9.6.7",
     "@types/node": "^12.11.7",
     "@types/proxyquire": "^1.3.28",
+    "@types/puppeteer": "^1.20.2",
     "@types/sinon": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
