Update telemtry endpoint to match data contract

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
         },
         {
             "type": "func",
-            "command": "host start",
+            "command": "host start --cors *",
             "problemMatcher": "$func-watch",
             "isBackground": true,
             "dependsOn": "npm build"
